# package-installer

./: .gitignore  COVERAGE.txt  Cargo.toml  GEMINI.md  MEMORY  Makefile  README.md  TECHDEBT.md  build.rs  go.mod  go.sum  install.sh  main.go  test_config.star
.cargo/: config.toml
Prompts/: CLI-DESIGN.md  CODING.md  ECOSYSTEMS.md  REPOSITORIES.md  ROADMAP.md  SPEC.md
build-tools/: Cargo.toml
build-tools/src/: main.rs
docs/: ARCHITECTURE.md  CAVE.md  CLI-DESIGN.md  CLI.md  CODING.md  DEF.md  DEVELOPMENT.md  MODULES.md  OLD-PROMPT.md  PKG.md  RECIPES.md  ROADMAP.md  SPEC.md  UX_DESIGN.md  WORKSPACE.md  pistar_authoring.md
pkg/archive/: extract.go  extract_test.go
pkg/bubblewrap/: bubblewrap.go  bubblewrap_test.go
pkg/cache/: cache.go  lock.go  lock_test.go
pkg/cave/: backend.go  cave.go  cave_test.go  config.go  logic.go  types.go
pkg/cave_bwrap/: bubblewrap.go  bubblewrap_test.go
pkg/cdl/: cli.cdl  cli.go  cli_support.go  gen.go
pkg/cli/: cli.cdl  cli.def  cli.go  cli_support.go  commands.go  engine.go  engine_test.go  gen.go  handlers.go  lexer.go  parser.go  pi-def-mode.el  recipe_repl.go  recipe_repl_test.go  theme.go  types.go
pkg/clidef/: cli.cdl  cli.go  cli_support.go  gen.go
pkg/common/: cave_logic.go  system.go  types.go
pkg/config/: build.go  config.go  types.go
pkg/devel/: test.go
pkg/disk/: disk_internal.go  manager.go  utils.go
pkg/display/: api.go  console.go  console_test.go
pkg/downloader/: api.go  downloader_test.go  http.go  manager.go
pkg/embed/: cli.def  embed.go
pkg/engine/: cave_handlers.go  disk_handlers.go  handlers.go  handlers_devel.go  types.go  (+4 more)
recipes/: android.star  elixir.star  elixir_ls.star  erlang.star  go.star  node.star  pi.repo.json  rust.star  vscode.star
scripts/: generate-coverage.sh
src/: build.rs  config.rs  devel_test.rs  main.rs  starlark_executor.rs
(+129 files in other folders)
