[package]
name = "pi"
version = "0.1.0"
edition = "2024"

[dependencies]
allocative = "0.3.4"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
parking_lot = { version = "0.12.5", features = ["serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
starlark = "0.13.0"

[dev-dependencies]
tempfile = "3.25.0"
