[package]
name = "pi"
version = "0.1.0"
edition = "2024"

[dependencies]
allocative = "0.3.4"
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.2"
dirs-next = "2.0.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.29"
parking_lot = { version = "0.12.5", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
sha2 = "0.10.9"
starlark = "0.13.0"
toml = "0.8.19"
ureq = "3.2.0"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
rayon = "1.10.0"
dashmap = "6.1.0"
tar = "0.4.43"
flate2 = "1.0.35"
xz2 = "0.1.7"
zip = "2.2.2"
whoami = "1.5.2"

[dev-dependencies]
tempfile = "3.25.0"
